task: Implement TASK.MD 17+ + Make a lot of small quick wins